--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "ajv": "^6.2.1",
     "express": "^4.16.3",
+    "firebase": "^4.11.0",
     "moment": "^2.21.0",
     "normalize.css": "^8.0.0",
     "numeral": "^2.0.6",
