--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ajv": "^6.2.1",
     "express": "^4.16.3",
     "firebase": "^4.11.0",
+    "history": "^4.7.2",
     "moment": "^2.21.0",
     "normalize.css": "^8.0.0",
     "numeral": "^2.0.6",
